Fixes Light/Dark mode being persistent between pages.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-:root {
+:root.light {
     --md-sys-color-primary: rgb(58 105 58);
     --md-sys-color-surface-tint: rgb(58 105 58);
     --md-sys-color-on-primary: rgb(255 255 255);
